fix(elements|ino-list-item): fix icon alignment

--- a/packages/elements/src/components/ino-list-item/ino-list-item.scss
+++ b/packages/elements/src/components/ino-list-item/ino-list-item.scss
@@ -69,6 +69,12 @@ ino-list-item {
     ino-checkbox {
       width: 100%;
     }
+
+    .ino-nav-item--leading-slot {
+      display: flex;
+      justify-content: center;
+      align-content: center;
+    }
   }
 
   ino-img .ino-img__image {
